build-tests/tests/fail/net_without_uds_missing_uds.rs
use build_tests::tokio_net::uds;

fn main() {}

